# revalign-teardown

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
revalign_teardown/: __init__.py  __main__.py  brands.py  build.py  cli.py  fcc.py  fetchers.py  photos.py  resolve.py  schema.py  signals.py
tests/: test_fetchers.py  test_parsers.py  test_signals.py  test_smoke.py
web/: index.html
web/data/: index.json
